fixed alignment on show

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -204,8 +204,8 @@ input[type=email]{
     border: 2px solid black;
     display:flex;
     flex-direction: column;
-    align-items: flex-start;
-    padding-left: 15px;
+    align-items: center;
+    /* padding-left: 15px; */
     justify-content: space-between;
 }
 .show-button input[type=submit]{
